--- a/public/style.css
+++ b/public/style.css
@@ -25,3 +25,15 @@ header {
     display: flex;
     justify-content: space-between;
 }
+
+.shown {
+    display: none;
+}
+
+.feedback {
+    border: 1px solid gray;
+    width: 200px;
+    margin: 10px;
+    padding: 5px;
+}
+
